tests/tools/typecheck/positive/noreturn_if_else.nv
fn choose(x: bool) : str {
    if (x) {
        return "yes";
    } else {
        nova_runtime_error("no");
    }
}

fn main() : void {
    return;
}
