tests/tools/typecheck/negative/call_arg_mismatch.nv
fn f(x: int) : void {
    return;
}

fn main() : void {
    f("hello");
    return;
}
